[package]
name = "ld54"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Larger, faster builds are fine for native
# Pass the flag "--profile native-release" to cargo
[profile.native-release]
inherits = "release"
opt-level = 3
lto = "fat"

# Optimise for size for the web build
[profile.release]
opt-level = 'z'
lto = "fat"
incremental = false

[dependencies]
bevy = { version = "0.11.2" }
rand = "0.8.5"
bevy-debug-text-overlay = "6"

macros = { path = "macros" }
bevy_ecs_tilemap = "0.11.0"
pathfinding = "4.3.2"
