[package]
name = "ld54"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Larger, faster builds are fine for native
# Pass the flag "--profile native-release" to cargo
[profile.native-release]
inherits = "release"
opt-level = 3
lto = "fat"

# Optimise for size for the web build
[profile.release]
opt-level = 'z'
lto = "fat"
incremental = false

[dependencies]
bevy = { version = "0.11.3", default-features = false, features = [
     "animation",
     "bevy_asset",
     "bevy_winit",
     "bevy_core_pipeline",
     "bevy_render",
     "bevy_sprite",
     "bevy_text",
     "bevy_ui",
     "png",
     "zstd",
     "x11",
     "ktx2",
     "filesystem_watcher",
     "webgl2"
]}
rand = "0.8.5"
bevy_kira_audio = { version = "0.16" }
bevy-debug-text-overlay = "6"
bevy-inspector-egui = "0.19.0"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
macros = { path = "macros" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", features = [ "atlas" ] }
pathfinding = "4.3.2"
console_error_panic_hook = "0.1.7"
